--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 body {
+    background-color: azure;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    /* margin: 0; */
+    
 }
 
 #display {
@@ -22,10 +23,9 @@ body {
 }
 
 .display {
-    background-color: blue;
+    background-color: teal;
     padding: 20px;
     font-size: 25px;
-    pointer-events: none;
 }
 
 .buttons {
@@ -42,10 +42,11 @@ body {
     padding: 20px;
     border: none;
     border-radius: 5px;
-    /* font-size: 20px; */
+    font-size: 20px;
     cursor: pointer;
 }
 
-button:hover {
-    background-color: green;
+.b:hover {
+    background-color: burlywood;
 }
+
